--- a/index.html
+++ b/index.html
@@ -7,302 +7,162 @@
   <style>
     body {
       margin: 0;
-      padding: 0;
       font-family: Arial, sans-serif;
-      background-color: #000;
-      color: #fff;
+      background: #111;
+      color: white;
     }
 
     /* Header */
-    header {
+    .header {
       display: flex;
       align-items: center;
-      justify-content: center;
-      padding: 10px 0;
-      background-color: #111;
-      position: sticky;
+      justify-content: space-between;
+      background: #222;
+      padding: 10px;
+      position: fixed;
       top: 0;
+      left: 0;
+      right: 0;
       z-index: 1000;
-      position: relative;
+    }
+
+    .menu-toggle {
+      font-size: 24px;
+      cursor: pointer;
+      background: none;
+      border: none;
+      color: white;
     }
 
     .logo {
       font-size: 20px;
       font-weight: bold;
       cursor: pointer;
+      background-color: #000; /* nền đen */
+      padding: 6px 12px;
+      border-radius: 4px;
     }
 
-    /* Nút ba gạch */
-    .dropbtn {
-      position: absolute;
-      left: 0;
-      top: 50%;
-      transform: translateY(-50%);
-      background-color: #000;
-      color: white;
-      padding: 10px 16px;
-      font-size: 20px;
+    .music-btn {
+      background: #000;
       border: none;
+      color: #fff;
+      padding: 6px 12px;
       cursor: pointer;
-      border-radius: 0;
-    }
-
-    .dropbtn:hover {
-      background-color: #222;
+      border-radius: 4px;
+      font-size: 14px;
     }
 
     /* Sidebar */
-    .dropdown-content {
-      height: 100vh;
-      width: 200px;
+    .sidebar {
       position: fixed;
       top: 0;
-      left: -200px;
-      background-color: #111;
-      overflow-x: hidden;
-      transition: 0.3s;
-      z-index: 2000;
-      padding-top: 0;
+      left: -250px;
+      width: 250px;
+      height: 100%;
+      background: #111;
+      transition: left 0.3s ease;
+      z-index: 999;
+      padding-top: 50px;
     }
 
-    .dropdown-content.show {
+    .sidebar.active {
       left: 0;
     }
 
-    .dropdown-content a {
-      display: block;
-      padding: 15px 20px;
-      color: #fff;
-      text-decoration: none;
-    }
-
-    .dropdown-content a:hover {
-      background-color: #333;
-    }
-
-    /* Logo trong dropdown */
     .sidebar-logo {
       color: #fff;
       font-size: 18px;
       margin: 0;
       padding: 15px 12px;
       text-align: left;
-      background-color: #000;
+      background-color: #000; /* nền đen */
       border-bottom: 1px solid #222;
     }
 
-    /* Container nội dung */
-    .container {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 20px;
-      background-color: #000;
-      opacity: 0;
-      transition: opacity 0.5s ease;
-    }
-
-    .container.show {
-      opacity: 1;
-    }
-
-    /* Overlay load */
-    #overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: #000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 3000;
-    }
-
-    /* Spinner */
-    .spinner {
-      border: 6px solid #333;
-      border-top: 6px solid #fff;
-      border-radius: 50%;
-      width: 50px;
-      height: 50px;
-      animation: spin 1s linear infinite;
-    }
-
-    @keyframes spin {
-      0% { transform: rotate(0deg);}
-      100% { transform: rotate(360deg);}
-    }
-
-    /* Nút Discord */
-    button {
-      background-color: #5865F2;
+    .sidebar a {
+      display: block;
+      padding: 12px;
       color: white;
-      border: none;
-      padding: 12px 20px;
-      border-radius: 6px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: 0.2s;
+      text-decoration: none;
     }
 
-    button:hover {
-      background-color: #4752c4;
+    .sidebar a:hover {
+      background: #333;
     }
 
-    /* Nút bật/tắt nhạc */
-    #musicBtn {
-      position: absolute;
-      right: 10px;
-      top: 50%;
-      transform: translateY(-50%);
-      background-color: #222;
-      padding: 8px 14px;
-      border-radius: 6px;
-      font-size: 14px;
-    }
-    #musicBtn:hover {
-      background-color: #444;
+    /* Main content */
+    .content {
+      padding: 70px 20px;
     }
   </style>
 </head>
 <body>
-
-  <!-- Overlay Load -->
-  <div id="overlay">
-    <div class="spinner"></div>
+  <div class="header">
+    <button class="menu-toggle">☰</button>
+    <div class="logo">Saki-Hub</div>
+    <button class="music-btn" onclick="toggleMusic()">▶ Nhạc</button>
   </div>
 
-  <!-- Header -->
-  <header>
-    <button class="dropbtn" id="menuBtn">☰</button>
-    <div class="logo" id="logo">Saki-Hub</div>
-    <button id="musicBtn">🔊</button>
-  </header>
-
-  <!-- Sidebar menu -->
-  <div class="dropdown-content" id="dropdownMenu">
-    <h2 class="sidebar-logo">Saki-Hub</h2>
-    <a href="#" data-page="home">Home</a>
-    <a href="#" data-page="script">Script</a>
-    <a href="#" data-page="connect">Connect</a>
+  <div class="sidebar" id="sidebar">
+    <div class="sidebar-logo">Saki-Hub</div>
+    <a href="?page=home">Home</a>
+    <a href="?page=script">Script</a>
+    <a href="?page=connect">Connect</a>
   </div>
 
-  <!-- Nội dung chính -->
-  <div class="container" id="mainContent"></div>
+  <div class="content" id="content">
+    <h1>Welcome to Saki-Hub</h1>
+    <p>Chọn mục ở menu bên trái để điều hướng.</p>
+  </div>
 
-  <!-- Nhạc nền -->
-  <audio id="bgm" loop>
-    <source src="bgm.mp3" type="audio/mpeg">
+  <audio id="bg-music" loop>
+    <source src="music.mp3" type="audio/mpeg">
   </audio>
 
   <script>
-    const overlay = document.getElementById('overlay');
-    const menuBtn = document.getElementById('menuBtn');
-    const dropdownMenu = document.getElementById('dropdownMenu');
-    const mainContent = document.getElementById('mainContent');
-    const logo = document.getElementById('logo');
-    const musicBtn = document.getElementById('musicBtn');
-    const bgm = document.getElementById('bgm');
+    const sidebar = document.getElementById("sidebar");
+    const toggleBtn = document.querySelector(".menu-toggle");
+    const content = document.getElementById("content");
+    const music = document.getElementById("bg-music");
+    let playing = false;
 
-    let isPlaying = false;
-
-    // Toggle nhạc
-    musicBtn.addEventListener("click", () => {
-      if (isPlaying) {
-        bgm.pause();
-        musicBtn.textContent = "🔇";
-      } else {
-        bgm.play();
-        musicBtn.textContent = "🔊";
-      }
-      isPlaying = !isPlaying;
+    toggleBtn.addEventListener("click", () => {
+      sidebar.classList.toggle("active");
     });
 
-    // Hide overlay khi load
-    window.addEventListener('load', () => {
-      setTimeout(() => {
-        overlay.style.display = 'none';
-        mainContent.classList.add('show');
-        navigateTo(window.location.pathname.replace("/", "") || "home", false);
-      }, 1000);
-    });
-
-    // Toggle sidebar
-    menuBtn.addEventListener('click', () => {
-      dropdownMenu.classList.toggle('show');
-    });
-
-    // Click ngoài sidebar thì tắt
-    window.addEventListener('click', (e) => {
-      if (!menuBtn.contains(e.target) && !dropdownMenu.contains(e.target)) {
-        dropdownMenu.classList.remove('show');
+    // Đóng sidebar khi click ngoài
+    document.addEventListener("click", (e) => {
+      if (!sidebar.contains(e.target) && !toggleBtn.contains(e.target)) {
+        sidebar.classList.remove("active");
       }
     });
 
-    // Điều hướng nội dung
-    function showPage(page) {
-      if(page === 'home'){
-        mainContent.innerHTML = `
-          <h1>Giới thiệu</h1>
-          <p>Toàn bộ web có nền màu đen, chữ trắng. Đây là nội dung Home.</p>
-        `;
-      } else if(page === 'script'){
-        mainContent.innerHTML = `
-          <h1>Script</h1>
-          <p>Đây là phần Script. Nội dung vẫn nền đen, chữ trắng.</p>
-        `;
-      } else if(page === 'connect'){
-        mainContent.innerHTML = `
-          <h1>Connect</h1>
-          <p>Đây là phần Connect. Nội dung nền đen, chữ trắng.</p>
-          <button id="discordBtn">Join Discord</button>
-        `;
-        const discordBtn = document.getElementById("discordBtn");
-        discordBtn.addEventListener("click", () => {
-          window.open("https://discord.gg/cHrynR4E", "_blank");
-        });
+    // Điều hướng bằng query string
+    function loadPage() {
+      const params = new URLSearchParams(window.location.search);
+      const page = params.get("page") || "home";
+      if (page === "home") {
+        content.innerHTML = "<h1>Home</h1><p>Đây là trang giới thiệu.</p>";
+      } else if (page === "script") {
+        content.innerHTML = "<h1>Script</h1><p>Nội dung script sẽ hiển thị ở đây.</p>";
+      } else if (page === "connect") {
+        content.innerHTML = '<h1>Connect</h1><button onclick="window.open(\'https://discord.gg/xxxx\', \'_blank\')">Vào Discord</button>';
       }
     }
 
-    function navigateTo(page, push=true) {
-      overlay.style.display = 'flex';
-      mainContent.classList.remove('show');
-      setTimeout(() => {
-        showPage(page);
-        overlay.style.display = 'none';
-        mainContent.classList.add('show');
-      }, 500);
+    loadPage();
 
-      if(push){
-        window.history.pushState({ page }, "", "/" + page);
+    // Nhạc
+    function toggleMusic() {
+      if (playing) {
+        music.pause();
+        playing = false;
+      } else {
+        music.play();
+        playing = true;
       }
     }
-
-    // Menu click
-    const links = dropdownMenu.querySelectorAll('a');
-    links.forEach(link => {
-      link.addEventListener('click', (e) => {
-        e.preventDefault();
-        const page = link.getAttribute('data-page');
-        navigateTo(page);
-        dropdownMenu.classList.remove('show');
-      });
-    });
-
-    // Click logo về Home
-    logo.addEventListener('click', () => {
-      navigateTo('home');
-    });
-
-    // Xử lý nút back/forward
-    window.addEventListener("popstate", (e) => {
-      if (e.state && e.state.page) {
-        navigateTo(e.state.page, false);
-      } else {
-        navigateTo("home", false);
-      }
-    });
   </script>
 </body>
 </html>
