--- a/index.html
+++ b/index.html
@@ -8,30 +8,21 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #111;
-      color: white;
+      background-color: #000; /* nền đen */
+      color: #fff; /* chữ trắng */
     }
 
     /* Header */
-    .header {
+    header {
       display: flex;
       align-items: center;
-      justify-content: space-between;
-      background: #222;
-      padding: 10px;
-      position: fixed;
+      justify-content: center;
+      padding: 10px 0;
+      background-color: #111; /* header màu đen */
+      position: sticky;
       top: 0;
-      left: 0;
-      right: 0;
       z-index: 1000;
-    }
-
-    .menu-toggle {
-      font-size: 24px;
-      cursor: pointer;
-      background: none;
-      border: none;
-      color: white;
+      position: relative;
     }
 
     .logo {
@@ -43,30 +34,40 @@
       border-radius: 4px;
     }
 
-    .music-btn {
-      background: #000;
+    /* Nút ba gạch */
+    .dropbtn {
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: #000; /* nền đen */
+      color: white;
+      padding: 10px 16px;
+      font-size: 20px;
       border: none;
-      color: #fff;
-      padding: 6px 12px;
       cursor: pointer;
-      border-radius: 4px;
-      font-size: 14px;
+      border-radius: 0;
+    }
+
+    .dropbtn:hover {
+      background-color: #111; /* hover vẫn đen */
     }
 
     /* Sidebar */
-    .sidebar {
+    .dropdown-content {
+      height: 100vh;
+      width: 220px;
       position: fixed;
       top: 0;
-      left: -250px;
-      width: 250px;
-      height: 100%;
-      background: #111;
-      transition: left 0.3s ease;
-      z-index: 999;
-      padding-top: 50px;
+      left: -220px;
+      background-color: #000; /* nền đen */
+      overflow-x: hidden;
+      transition: 0.3s;
+      z-index: 2000;
+      padding-top: 60px;
     }
 
-    .sidebar.active {
+    .dropdown-content.show {
       left: 0;
     }
 
@@ -77,92 +78,200 @@
       padding: 15px 12px;
       text-align: left;
       background-color: #000; /* nền đen */
-      border-bottom: 1px solid #222;
+      border-bottom: 1px solid #111;
     }
 
-    .sidebar a {
+    .dropdown-content a {
       display: block;
-      padding: 12px;
-      color: white;
+      padding: 12px 20px;
+      color: #fff;
       text-decoration: none;
     }
 
-    .sidebar a:hover {
-      background: #333;
+    .dropdown-content a:hover {
+      background-color: #111; /* hover màu đen */
     }
 
-    /* Main content */
-    .content {
-      padding: 70px 20px;
+    /* Container nội dung */
+    .container {
+      max-width: 800px;
+      margin: 70px auto 40px auto; /* cách header */
+      padding: 20px;
+      background-color: #000; /* nền đen */
+      opacity: 0;
+      transition: opacity 0.5s ease;
+    }
+
+    .container.show {
+      opacity: 1;
+    }
+
+    /* Overlay load */
+    #overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #000;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 3000;
+    }
+
+    /* Spinner */
+    .spinner {
+      border: 6px solid #111;
+      border-top: 6px solid #fff;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg);}
+      100% { transform: rotate(360deg);}
+    }
+
+    /* Nút Discord */
+    button {
+      background-color: #000; /* nền đen */
+      color: white;
+      border: 1px solid #111;
+      padding: 12px 20px;
+      border-radius: 6px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: 0.2s;
+    }
+
+    button:hover {
+      background-color: #111;
     }
   </style>
 </head>
 <body>
-  <div class="header">
-    <button class="menu-toggle">☰</button>
-    <div class="logo">Saki-Hub</div>
-    <button class="music-btn" onclick="toggleMusic()">▶ Nhạc</button>
+
+  <!-- Overlay Load -->
+  <div id="overlay">
+    <div class="spinner"></div>
   </div>
 
-  <div class="sidebar" id="sidebar">
+  <!-- Header -->
+  <header>
+    <button class="dropbtn" id="menuBtn">☰</button>
+    <div class="logo" id="logo">Saki-Hub</div>
+  </header>
+
+  <!-- Sidebar menu -->
+  <div class="dropdown-content" id="dropdownMenu">
     <div class="sidebar-logo">Saki-Hub</div>
-    <a href="?page=home">Home</a>
-    <a href="?page=script">Script</a>
-    <a href="?page=connect">Connect</a>
+    <a href="#" data-page="home">Home</a>
+    <a href="#" data-page="script">Script</a>
+    <a href="#" data-page="connect">Connect</a>
   </div>
 
-  <div class="content" id="content">
-    <h1>Welcome to Saki-Hub</h1>
-    <p>Chọn mục ở menu bên trái để điều hướng.</p>
+  <!-- Nội dung chính -->
+  <div class="container" id="mainContent">
+    <h1>Giới thiệu</h1>
+    <p>Toàn bộ web có nền màu đen, chữ trắng. Đây là nội dung Home mặc định.</p>
   </div>
-
-  <audio id="bg-music" loop>
-    <source src="music.mp3" type="audio/mpeg">
-  </audio>
 
   <script>
-    const sidebar = document.getElementById("sidebar");
-    const toggleBtn = document.querySelector(".menu-toggle");
-    const content = document.getElementById("content");
-    const music = document.getElementById("bg-music");
-    let playing = false;
+    const overlay = document.getElementById('overlay');
+    const menuBtn = document.getElementById('menuBtn');
+    const dropdownMenu = document.getElementById('dropdownMenu');
+    const mainContent = document.getElementById('mainContent');
+    const logo = document.getElementById('logo');
 
-    toggleBtn.addEventListener("click", () => {
-      sidebar.classList.toggle("active");
+    // Hide overlay sau khi load web
+    window.addEventListener('load', () => {
+      setTimeout(() => {
+        overlay.style.display = 'none';
+        mainContent.classList.add('show');
+      }, 1000);
     });
 
-    // Đóng sidebar khi click ngoài
-    document.addEventListener("click", (e) => {
-      if (!sidebar.contains(e.target) && !toggleBtn.contains(e.target)) {
-        sidebar.classList.remove("active");
+    // Toggle sidebar
+    menuBtn.addEventListener('click', () => {
+      dropdownMenu.classList.toggle('show');
+    });
+
+    // Click ngoài sidebar thì tắt
+    window.addEventListener('click', (e) => {
+      if (!menuBtn.contains(e.target) && !dropdownMenu.contains(e.target)) {
+        dropdownMenu.classList.remove('show');
       }
     });
 
-    // Điều hướng bằng query string
-    function loadPage() {
-      const params = new URLSearchParams(window.location.search);
-      const page = params.get("page") || "home";
-      if (page === "home") {
-        content.innerHTML = "<h1>Home</h1><p>Đây là trang giới thiệu.</p>";
-      } else if (page === "script") {
-        content.innerHTML = "<h1>Script</h1><p>Nội dung script sẽ hiển thị ở đây.</p>";
-      } else if (page === "connect") {
-        content.innerHTML = '<h1>Connect</h1><button onclick="window.open(\'https://discord.gg/xxxx\', \'_blank\')">Vào Discord</button>';
-      }
+    // Hàm hiển thị nội dung
+    function showPage(page){
+      overlay.style.display = 'flex';
+      mainContent.classList.remove('show');
+
+      setTimeout(() => {
+        if(page === 'home'){
+          mainContent.innerHTML = `
+            <h1>Giới thiệu</h1>
+            <p>Toàn bộ web có nền màu đen, chữ trắng. Đây là nội dung Home.</p>
+          `;
+        } else if(page === 'script'){
+          mainContent.innerHTML = `
+            <h1>Script</h1>
+            <p>Đây là phần Script. Nội dung vẫn nền đen, chữ trắng.</p>
+          `;
+        } else if(page === 'connect'){
+          mainContent.innerHTML = `
+            <h1>Connect</h1>
+            <p>Đây là phần Connect. Nội dung nền đen, chữ trắng.</p>
+            <button id="discordBtn">Join Discord</button>
+          `;
+          // gắn sự kiện cho nút Discord
+          const discordBtn = document.getElementById("discordBtn");
+          discordBtn.addEventListener("click", () => {
+            window.open("https://discord.gg/cHrynR4E", "_blank");
+          });
+        }
+        overlay.style.display = 'none';
+        mainContent.classList.add('show');
+      }, 800);
     }
 
-    loadPage();
+    // Menu click
+    const links = dropdownMenu.querySelectorAll('a');
+    links.forEach(link => {
+      link.addEventListener('click', (e) => {
+        e.preventDefault();
+        const page = link.getAttribute('data-page');
+        showPage(page);
+        dropdownMenu.classList.remove('show');
+      });
+    });
 
-    // Nhạc
-    function toggleMusic() {
-      if (playing) {
-        music.pause();
-        playing = false;
-      } else {
-        music.play();
-        playing = true;
-      }
+    // Click logo về Home
+    logo.addEventListener('click', () => {
+      showPage('home');
+    });
+
+    // Giữ trang khi reload
+    const currentPage = localStorage.getItem('currentPage');
+    if(currentPage){
+      showPage(currentPage);
     }
+
+    // Lưu page hiện tại
+    const allLinks = dropdownMenu.querySelectorAll('a');
+    allLinks.forEach(link => {
+      link.addEventListener('click', (e)=>{
+        const page = link.getAttribute('data-page');
+        localStorage.setItem('currentPage', page);
+      });
+    });
+    logo.addEventListener('click', ()=>{
+      localStorage.setItem('currentPage', 'home');
+    });
   </script>
 </body>
 </html>
