--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       align-items: center;
       justify-content: center;
       padding: 10px 0;
-      background-color: #000; /* nền header đen */
+      background-color: #111;
       position: sticky;
       top: 0;
       z-index: 1000;
@@ -30,9 +30,7 @@
       font-size: 20px;
       font-weight: bold;
       cursor: pointer;
-      color: #fff; /* chữ logo trắng */
-      background-color: #000;
-      padding: 5px 10px;
+      color: #000; /* logo màu đen */
     }
 
     /* Nút ba gạch */
@@ -41,7 +39,7 @@
       left: 0;
       top: 50%;
       transform: translateY(-50%);
-      background-color: #000;
+      background-color: #000; /* nền đen */
       color: white;
       padding: 10px 16px;
       font-size: 20px;
@@ -51,7 +49,7 @@
     }
 
     .dropbtn:hover {
-      background-color: #111;
+      background-color: #222;
     }
 
     /* Sidebar */
@@ -65,7 +63,7 @@
       overflow-x: hidden;
       transition: 0.3s;
       z-index: 2000;
-      padding-top: 60px;
+      padding-top: 0;
     }
 
     .dropdown-content a {
@@ -88,10 +86,10 @@
       font-size: 20px;
       font-weight: bold;
       margin: 0;
-      padding: 25px 12px;
-      text-align: center;
+      padding: 20px 12px;
       background-color: #000;
       border-bottom: 1px solid #111;
+      text-align: left;
     }
 
     /* Container nội dung */
@@ -138,7 +136,7 @@
     }
 
     /* Nút Discord */
-    button {
+    button.discord {
       background-color: #5865F2;
       color: white;
       border: none;
@@ -149,16 +147,27 @@
       transition: 0.2s;
     }
 
-    button:hover {
+    button.discord:hover {
       background-color: #4752c4;
     }
 
-    /* Nút Music xuống dưới bên phải */
+    /* Nút Music */
     #musicBtn {
       position: fixed;
       right: 20px;
-      bottom: 20px; /* xuống dưới */
+      bottom: 20px;
       z-index: 4000;
+      background-color: #000;
+      color: #fff;
+      border: none;
+      padding: 12px 16px;
+      font-size: 18px;
+      cursor: pointer;
+      border-radius: 6px;
+    }
+
+    #musicBtn:hover {
+      background-color: #222;
     }
   </style>
 </head>
@@ -204,26 +213,31 @@
     const bgm = document.getElementById('bgm');
     let isPlaying = false;
 
+    // Hide overlay sau khi load web
     window.addEventListener('load', () => {
       setTimeout(() => {
         overlay.style.display = 'none';
         mainContent.classList.add('show');
 
+        // Load page từ URL hoặc localStorage
         const page = new URLSearchParams(window.location.search).get("page") || localStorage.getItem("currentPage") || "home";
         showPage(page);
       }, 1000);
     });
 
+    // Toggle sidebar
     menuBtn.addEventListener('click', () => {
       dropdownMenu.classList.toggle('show');
     });
 
+    // Click ngoài sidebar thì tắt
     window.addEventListener('click', (e) => {
       if (!menuBtn.contains(e.target) && !dropdownMenu.contains(e.target)) {
         dropdownMenu.classList.remove('show');
       }
     });
 
+    // Nút phát nhạc
     musicBtn.addEventListener('click', () => {
       if(isPlaying){
         bgm.pause();
@@ -236,6 +250,7 @@
       }
     });
 
+    // Hiển thị nội dung
     function showPage(page){
       overlay.style.display = 'flex';
       mainContent.classList.remove('show');
@@ -255,7 +270,7 @@
           mainContent.innerHTML = `
             <h1>Connect</h1>
             <p>Đây là phần Connect. Nội dung nền đen, chữ trắng.</p>
-            <button id="discordBtn">Join my server</button>
+            <button class="discord" id="discordBtn">Join my server</button>
           `;
           const discordBtn = document.getElementById("discordBtn");
           discordBtn.addEventListener("click", () => {
@@ -265,6 +280,7 @@
         overlay.style.display = 'none';
         mainContent.classList.add('show');
 
+        // Lưu page hiện tại
         localStorage.setItem("currentPage", page);
         const url = new URL(window.location);
         url.searchParams.set('page', page);
@@ -272,6 +288,7 @@
       }, 800);
     }
 
+    // Menu click
     const links = dropdownMenu.querySelectorAll('a');
     links.forEach(link => {
       link.addEventListener('click', (e) => {
@@ -282,6 +299,7 @@
       });
     });
 
+    // Click logo về Home
     logo.addEventListener('click', () => {
       showPage('home');
     });
